--- a/src/app/features/organisation-section/components/project/project.component.html
+++ b/src/app/features/organisation-section/components/project/project.component.html
@@ -71,7 +71,7 @@
 
                 <!-- Modal Header -->
                 <div class="flex justify-between items-center border-b pb-2">
-                    <h3 class="text-xl font-semibold">Add Department</h3>
+                    <h3 class="text-xl font-semibold">Add Project Deliverable</h3>
                     <button class="text-gray-500 hover:text-gray-700 text-2xl"
                         (click)="toggleModal('projectDeliverable')">&times;</button>
                 </div>
@@ -114,7 +114,7 @@
                             <!-- Deliverable Name -->
                             <div>
                                 <label class="block mb-2 font-semibold">Project Deliverable*</label>
-                                <input type="text" [(ngModel)]="projectDeliverableForm.project_deliverable"
+                                <input type="text" [(ngModel)]="projectDeliverableForm.project_deliverable_name"
                                     #deliverableField="ngModel" name="deliverable" required
                                     class="border p-2 w-full rounded-md" placeholder="Enter deliverable name"
                                     [ngClass]="{'border-red-500': (deliverableField.invalid && deliverableField.touched) || (projectDeliverableFormRef.submitted && deliverableField.invalid)}" />
