--- a/src/app/features/timesheet/components/fill-timesheet/fill-timesheet.component.html
+++ b/src/app/features/timesheet/components/fill-timesheet/fill-timesheet.component.html
@@ -9,14 +9,12 @@
     </div>
 
     <!-- 🔹 Input Fields Section -->
-    <!-- 🔹 Input Fields Section -->
-    <!-- 🔹 Input Fields Section -->
     <div class="bg-white p-6 rounded-xl shadow-md space-y-6">
         <!-- First Row (Date, Customer, Project, Deliverable) -->
         <div class="grid grid-cols-4 gap-4">
             <div class="flex flex-col">
                 <label class="text-gray-700 font-medium">Filling Timesheet for</label>
-                <input type="date" class="p-2 border rounded-lg" [(ngModel)]="selectedDate" required>
+                <input type="date" class="p-2 border rounded-lg" [(ngModel)]="selectedDate" [min]="minDate" [max]="maxDate" required>
             </div>
 
             <div class="flex flex-col">
